added page description

--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game: Driving</title>
+    <title>Game: Dinosaur</title>
+    <meta name="description" content="Game online">
+    <meta name="keywords" content="Game, Play, Dinosaur">
+    <meta name="author" content="Harryguci">
+    <link rel="icon" type="image/x-icon" href="/allosaurus-svgrepo-com.svg">
 
+    
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
